--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v={{ time }}">
     <title>Busca CEP</title>
+    <script>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        alert("{{ messages[0] }}");
+        {% endif %}
+        {% endwith %}
+    </script>
 </head>
 <body>
     <div>
