--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v={{ time }}">
     <title>Busca CEP</title>
-    <script>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        alert("{{ messages[0] }}");
-        {% endif %}
-        {% endwith %}
-    </script>
+    
 </head>
+
 <body>
     <div>
         <div>
@@ -23,11 +19,20 @@
                 </div>
                 <input type="text" name="cep" id="cep" placeholder="Digite o CEP" maxlength="8">
                 <button type="submit">Buscar</button>
-                <label></label>
+                <label style="text-align: center;">
+                
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                   {{ messages[0]}}
+                    {% endif %}
+                    {% endwith %}
+                
+                </label>
             </form>
         </div>
     </div>
-    
+
     <script src="{{ url_for('static', filename='js/script.js') }}?v={{ time }}"></script>
 </body>
+
 </html>
