--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,7 @@ label {
     margin: 5px;
     color: rgb(50, 50, 50);
     font-weight: bold;
+    text-align: center;
 }
 .botao{
     background-color: rgb(54, 165, 40);
